--- a/main.ipynb
+++ b/main.ipynb
@@ -41,13 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import ucimlrepo as uci"
    ]
   },
@@ -872,7 +873,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the target variable contains five different output values for differnet types of heart disease. In this project, a binary classification is implemented, which only differentiates between \"No Heart Disease\" as 0 and \"Hart Disease as 1. Therefore, we need to update the columns to account for that."
+    "Here we can see that the target variable contains five different output values for differnet types of heart disease. In this project, a binary classification is implemented, which only differentiates between \"No Heart Disease\" as 0 and \"Hart Disease as 1. Therefore, we need to update the columns to account for that. We do that by first mergin X and y, then we can limit the classification to a binary classification like this:"
    ]
   },
   {
@@ -2663,12 +2664,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 297 entries, 0 to 301\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   age       297 non-null    int64  \n",
+      " 1   sex       297 non-null    int64  \n",
+      " 2   cp        297 non-null    int64  \n",
+      " 3   trestbps  297 non-null    int64  \n",
+      " 4   chol      297 non-null    int64  \n",
+      " 5   fbs       297 non-null    int64  \n",
+      " 6   restecg   297 non-null    int64  \n",
+      " 7   thalach   297 non-null    int64  \n",
+      " 8   exang     297 non-null    int64  \n",
+      " 9   oldpeak   297 non-null    float64\n",
+      " 10  slope     297 non-null    int64  \n",
+      " 11  ca        297 non-null    float64\n",
+      " 12  thal      297 non-null    float64\n",
+      " 13  target    297 non-null    int64  \n",
+      "dtypes: float64(3), int64(11)\n",
+      "memory usage: 34.8 KB\n"
+     ]
+    }
+   ],
    "source": [
     "df.dropna(inplace=True)\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the data is cleaned, we can split the into X and y again and then further split them into train and test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(\"target\", axis=1)\n",
+    "y = df[\"target\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1234)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Initial Question**: *Wait! Before you look at the data any further, you need to create a test set, put it aside, and never look at it.*\n",
+    "*Why should you do this at this stage?*\n",
+    "> **Answer**: The purpose of the testing data is to validate a models performance after training. When testing data is already known during training, the resulting models performance on the testing is skewed because the model has already seen the data and is therefore biased."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Model Selection"
    ]
   }
  ],
