--- a/main.ipynb
+++ b/main.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "import seaborn as sns\n",
     "\n",
@@ -5449,6 +5450,148 @@
    "source": [
     "knn_classifier = pickle.load(open(\"./Models/knn_classifier_1.pkl\", \"rb\")) # rb read binary\n",
     "knn_classifier.score(X_test_scaled, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that there are 3 differnet models to work with, they need to be compared in order to determine the best model. To do this, cross validation is needed, because a single train test split is not a good practice due to the fact that different train test splits can vary in result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: *Explain K-fold cross-validation*\n",
+    "> **Answer**: Data is split into K different train-test-subsets. The model is then trained and validated K times on each different subset. When this is done, the average performance can be calculated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nikla\\anaconda3\\envs\\case_study_1_heart_disease\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\nikla\\anaconda3\\envs\\case_study_1_heart_disease\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\nikla\\anaconda3\\envs\\case_study_1_heart_disease\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\nikla\\anaconda3\\envs\\case_study_1_heart_disease\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\nikla\\anaconda3\\envs\\case_study_1_heart_disease\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "c:\\Users\\nikla\\anaconda3\\envs\\case_study_1_heart_disease\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model  scores: {'Logistic Regression': 0.8666666666666667, 'KNN': 0.6166666666666667, 'Random Forest plain': 0.8} \n",
+      "\n",
+      "Model CV scores: {'Logistic Regression': np.float64(0.8481382978723404), 'KNN': np.float64(0.6625), 'Random Forest plain': np.float64(0.810372340425532)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup random seed\n",
+    "np.random.seed(4321)\n",
+    "\n",
+    "models = { \"Logistic Regression\": LogisticRegression(),\n",
+    "            \"KNN\": KNeighborsClassifier(),\n",
+    "            \"Random Forest plain\": RandomForestClassifier()}\n",
+    "\n",
+    "# Create a function to fit and score models\n",
+    "def fit_and_score(models, X_train, X_test, y_train, y_test):\n",
+    "    cvmodel_scores = {} # Improved to fit and score models with cross-validation\n",
+    "    score = {}\n",
+    "    for name, model in models.items():\n",
+    "        #    train\n",
+    "        model.fit(X_train, y_train)\n",
+    "        # Evaluate  ans store score\n",
+    "        score [name] = model.score(X_test, y_test)\n",
+    "        # Improved to fit and score models with cross-validation\n",
+    "        cv_scores = cross_val_score(model, X_train, y_train, cv=5)\n",
+    "        cvmodel_scores[name] = np.mean(cv_scores)\n",
+    "    return  score, cvmodel_scores\n",
+    "\n",
+    "\n",
+    "model_scores = fit_and_score(models=models,\n",
+    "                            X_train=X_train,\n",
+    "                            X_test=X_test,\n",
+    "                            y_train=y_train,\n",
+    "                            y_test=y_test)\n",
+    "\n",
+    "# model_scores\n",
+    "print(\"Model  scores:\", model_scores[0], \"\\n\\nModel CV scores:\", model_scores[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: *Why did K-NN not perform well?*\n",
+    "> **Answer**: This can be due to various reasons. First, the data was not scaled before training therefore it could be that this skews the results. Additionally, a classification between two classes with that many features might also have an impact in performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: *Interpret these obtained scores*\n",
+    "> **Answer**: When looking at the model scores, it can be seen that logistic regression and random forest classification achieves a higher accuracy of 86% and 80%, which shows that the logistic regression model was able to predict slightly better for the same testing data. The KNN classifier on the other hand does not perform nearuly as well, reaching only about 61% accuracy. \n",
+    "When looking at the cross validated data, a smiliar result can be seen. Now the logistic regression model and the random forest classifier achieve more similar results with a difference of around 3-4 percent. The KNN classifier achieved slightly better results during cross validation, but still only 66%, which means it is wrong 1/3 of the time.\n",
+    "In conclusion, the logistic regression model and the random forest classifier were able to achieve better results with an average of around 80% accuracy."
    ]
   }
  ],
